admin_get_task implemented
