# static/openapi.yaml
@@ -795,6 +795,120 @@ paths:
                               type: "array"
                               items:
                                 type: "string"
+                                
+  /admin_get_task:
+    get:
+      tags:
+      - Admin frontend dedicated
+      summary: "Az AdminProfile-lal rendelkező felhasználó letudja kérdezni egy dedikált saját taskot."
+      description: "Az endpoint segítségével lekérdezhető az admin frontenden a new task felület, vagy pedig a korábbiakat lehet megtekinteni."
+      operationId: "getAdminNewTask"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "AdminProfile"
+        description: "Felhasználóhoz tartozó Bearer token szükséges az authorizációs headerbe."
+        schema:
+          type: "object"
+          properties:
+            type:
+              type: "string"
+              example: "Task"
+            data:
+              type: "object"
+              properties:
+                _id:
+                  type: "string"
+                  example: "Az adott task id-ja."
+      responses:
+        "400":
+          description: "Error"
+          schema:
+            type: "object"
+            properties:
+              type:
+                type: "string"
+                example:
+                  "Error"
+              data:
+                type: "object"
+                properties:
+                  description:
+                    type: "string"
+                    example:
+                      "Only Admins can access these type of content!"
+        "200":
+          description: "Success"
+          schema:
+            type: "object"
+            properties:
+              type:
+                type: "string"
+                example:
+                  "Success"
+              data:
+                type: "object"
+                properties:
+                  data:
+                    type: "object"
+                    properties:
+                      task:
+                        type: "object"
+                        properties:
+                          _id:
+                            type: "string"
+                          company:
+                            type: "string"
+                          reward:
+                            type: "string"
+                          max_submission_number:
+                            type: "integer"
+                          immediately_evaluated:
+                            type: "boolean"
+                          title:
+                            type: "string"
+                          description:
+                            type: "string"
+                          expiration:
+                            type: "string"
+                          submits:
+                            type: "array"
+                            items:
+                              type: "string"
+                  reward:
+                    type: "object"
+                    properties:
+                      _id:
+                        type: "string"
+                      title:
+                        type: "string"
+                      description:
+                        type: "string"
+                      company:
+                        type: "string"
+                      redeem_code:
+                        type: "string"
+                      expiration:
+                        type: "string"
+                  submit:
+                    type: "array"
+                    items:
+                      type: "object"
+                      properties:
+                        _id:
+                          type: "string"
+                        user_id:
+                          type: "string"
+                        task_id:
+                          type: "string"
+                        image:
+                          type: "string"
+                        state:
+                          type: "string"
+                          
               
                   
           
